feat: TODO concluídos e desafio feito

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+    "ConexaoPadrao": "Server=DESKTOP-F5528FD; Database=Tarefas;Integrated Security=SSPI;TrustServerCertificate=True"
   }
 }
